[package]
name = "minelander"
version = "0.7.1"
edition = "2021"
authors = ["jafkc2"]
repository = "https://github.com/jafkc2/minelander"
build = "build.rs"

[profile.release]
strip = true
lto = true

[dependencies]
iced = { version = "0.12.0", features = ["tokio", "svg", "image", "multi-window"] }
reqwest = {version = "0.11.22", features = ["json"]}
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
open = "5.0.0"
zip = "0.6.6"
uuid = { version = "1.5.0", features = ["v4"] }
md5 = "0.7.0"
shared_child = "1.0.0"
tar = "0.4.40"
flate2 = "1.0.30"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
